--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tool</title>
 </head>
-
 <body>
   <h1>Download logo abaixo</h1>
-  <a href="/Code.zip" download>Download</a>  </a>
+  <a href="https://raw.githubusercontent.com/rebirthsk/Server-test/main/Code.zip" download>Download</a>
 </body>
-
 </html>
